Bug 271655 - Kpat segfaults and prevents clean logout of KDE.
Summary: Kpat segfaults and prevents clean logout of KDE.
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Parker Coates
URL:
Keywords:
: 267086 272196 272394 295698 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-25 00:58 UTC by dale
Modified: 2012-03-10 20:16 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.37 KB, text/plain)
2011-09-30 22:35 UTC, Brice Maron
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dale 2011-04-25 00:58:47 UTC
Version:           3.5 (using KDE 4.6.2) 
OS:                Linux

If I log out of KDE while Kpat is open, Kpat seg faults which results in a pop up error message which in turn prevent KDE from logging out.  The error message will sit there until I click close, then KDE logs out normally.  

This used to work normally but it has been a good while.  Since KDE is sort of moving fast, I assumed it would get noticed and fixed but maybe no one else noticed it.  So, I posted to the KDE mailing list, it was confirmed by another user and here we are.  

Reproducible: Always

Steps to Reproduce:
Leave Kpat open and logout of KDE.  It happens every time here.  

Actual Results:  
Error pops up that says Kpat closed unexpectedly and it waits on the user to click close. 

Expected Results:  
KDE to close Kpat and logout cleanly.  

Gentoo.  gcc-4.4.5  python:2.7.1-r1  

[ebuild   R   ~] kde-base/kpat-4.6.2  USE="handbook (-aqua) -debug (-kdeenablefinal) (-kdeprefix)"

Let me know if you need more info.  I hope I made this clear enough.  I'm not a bug filing expert.
Comment 1 Duncan 2011-04-25 08:25:59 UTC
FWIW, here's the link to the list thread, on gmane:

Kpatience not closing correctly when logging out.
http://comments.gmane.org/gmane.comp.kde.linux/27129

(I was the one that confirmed it on the list, also running Gentoo, but gcc 4.5.2.  KDE 4.6.2 upgraded from 4.6.1... all the way back to 4.2.4 and from there to 3.5.10 and back, ultimately to the kde 2.x era in 2001.)
Comment 2 Frederik Schwarzer 2011-05-02 12:37:09 UTC
Application: kpat (3.6) (Trunk from Source)
KDE Platform Version: 4.6.2 (4.6.2) (Debian Packages)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-fs i686
Distribution (Platform): Debian unstable

-- Information about the crash:
Open KPat (I used Klondike), move a few cards, then shutdown the computer.
On KDE shutdown, the crashmanager comes up showing the attached backtrace.

-- Backtrace:
Application: KPatience (kpat), signal: Segmentation fault
[KCrash Handler]
#7  QWidget::~QWidget (this=0x83b50c0, __in_chrg=<value optimized out>) at
kernel/qwidget.cpp:1585
#8  0xb6937861 in QFrame::~QFrame (this=0x83b50c0, __in_chrg=<value optimized
out>) at widgets/qframe.cpp:240
#9  0xb69c7d24 in QAbstractScrollArea::~QAbstractScrollArea (this=0x83b50c0,
__in_chrg=<value optimized out>) at widgets/qabstractscrollarea.cpp:521
#10 0xb6b8b3a1 in QGraphicsView::~QGraphicsView (this=0x83b50c0,
__in_chrg=<value optimized out>) at graphicsview/qgraphicsview.cpp:1159
#11 0x08083a08 in PatienceView::~PatienceView() ()
#12 0x08083a41 in PatienceView::~PatienceView() ()
#13 0xb776bb63 in KGameRenderer::~KGameRenderer() () from
/home/fs/usr/lib/libkdegames.so.5
#14 0x080804be in Renderer::~Renderer() ()
#15 0x0808051b in RendererPrivate::~RendererPrivate() ()
#16 0x0808012e in ._164::destroy() ()
#17 0x08070c37 in KCleanUpGlobalStatic::~KCleanUpGlobalStatic() ()
#18 0xb5b7f54f in __run_exit_handlers (status=0, listp=0xb5ca5324,
run_list_atexit=true) at exit.c:78
#19 0xb5b7f5bf in exit (status=0) at exit.c:100
#20 0xb5b66ede in __libc_start_main (main=0x805b025 <main>, argc=1,
ubp_av=0xbf9fe114, init=0x80a1dd0 <__libc_csu_init>, fini=0x80a1dc0
<__libc_csu_fini>, rtld_fini=0xb781f380 <_dl_fini>, stack_end=0xbf9fe10c) at
libc-start.c:260
#21 0x0805aaa1 in _start ()
Comment 3 Frederik Schwarzer 2011-05-02 12:37:43 UTC
*** Bug 272196 has been marked as a duplicate of this bug. ***
Comment 4 EGD 2011-05-02 19:42:43 UTC
Bug reproduced in openSUSE 11.3 and 11.4. Not reproduced in Ubuntu.
http://bugzilla.suse.ru/show_bug.cgi?id=27
Comment 5 Parker Coates 2011-05-08 16:57:46 UTC
*** Bug 267086 has been marked as a duplicate of this bug. ***
Comment 6 Brice Maron 2011-09-30 22:35:35 UTC
Created attachment 64107 [details]
New crash information added by DrKonqi

kpat (3.5.1) on KDE Platform 4.6.2 (4.6.2) using Qt 4.7.2

- What I was doing when the application crashed:

kpat was open while shutingdown kde...
the crash handler then shows up and prevent de pc to continue

-- Backtrace (Reduced):
#7  QWidget::~QWidget (this=0xa0f62c8, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1585
#8  0x01507151 in QFrame::~QFrame (this=0xa0f62c8, __in_chrg=<value optimized out>) at widgets/qframe.cpp:240
#9  0x01596144 in QAbstractScrollArea::~QAbstractScrollArea (this=0xa0f62c8, __in_chrg=<value optimized out>) at widgets/qabstractscrollarea.cpp:521
#10 0x017520a1 in QGraphicsView::~QGraphicsView (this=0xa0f62c8, __in_chrg=<value optimized out>) at graphicsview/qgraphicsview.cpp:1159
#11 0x08078302 in PatienceView::~PatienceView (this=0xa0f62c8, __in_chrg=<value optimized out>) at ../../kpat/view.cpp:77
Comment 7 Parker Coates 2011-10-27 03:07:31 UTC
SVN commit 1260924 by coates:

Make Renderer a pseudo-singleton to avoid crashes on logout.

An in depth description of the issue can be found here:
http://lists.kde.org/?l=kde-games-devel&m=130499552229629

This commit sidesteps the basic issue by avoiding the use of a
K_GLOBAL_STATIC.

CCBUG:271655

 M  +1 -0      mainwindow.cpp  
 M  +10 -9     renderer.cpp  
 M  +3 -0      renderer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1260924
Comment 8 Parker Coates 2011-10-27 03:28:36 UTC
SVN commit 1260926 by coates:

Backport of commit 1260924.

Make Renderer a pseudo-singleton to avoid crashes on logout.

An in depth description of the issue can be found here:
http://lists.kde.org/?l=kde-games-devel&m=130499552229629

This commit sidesteps the basic issue by avoiding the use of a
K_GLOBAL_STATIC.

BUG:271655
FIXED-IN:4.7.3


 M  +1 -0      mainwindow.cpp  
 M  +10 -9     renderer.cpp  
 M  +3 -0      renderer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1260926
Comment 9 Parker Coates 2011-11-06 23:54:12 UTC
*** Bug 272394 has been marked as a duplicate of this bug. ***
Comment 10 Parker Coates 2012-03-10 20:16:46 UTC
*** Bug 295698 has been marked as a duplicate of this bug. ***