Backport of commit 1260924.

Make Renderer a pseudo-singleton to avoid crashes on logout.

An in depth description of the issue can be found here:
http://lists.kde.org/?l=kde-games-devel&m=130499552229629

This commit sidesteps the basic issue by avoiding the use of a
K_GLOBAL_STATIC.

BUG:271655
FIXED-IN:4.7.3

svn path=/branches/KDE/4.7/kdegames/kpat/; revision=1260926